--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: your_site_name # Change this to your site name
-site_description: A cool description of your site
+site_name: Philimytho Library
+site_description: collection of information on Philippine folklore and mythology
 site_url: https://change_me.io/ # Change this to your site URL
 
 theme:
