--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_url: https://emrie-candera.github.io/philimytho-library/
 
 theme:
     name: 'material'
-    logo: assets/meta/favicons.png
-    favicon: assets/meta/favicons.png
+    logo: docs/assets/img/philimytho-logo.png
+    favicon: docs/assets/img/philimytho-logo.png
     custom_dir: overrides
     font:
         text: Ubuntu
